--- a/src/main/resources/templates/show_city.html
+++ b/src/main/resources/templates/show_city.html
@@ -9,35 +9,35 @@
 <table>
 <tr>
     <td>ID</td>
-    <td th:field="${{city.id}}"></td>
+    <td th:text="${{cityInfo.id}}"></td>
 </tr>
 <tr>
     <td>Name</td>
-    <td th:field="${{city.cityName}}"></td>
+    <td th:text="${{cityInfo.cityName}}"></td>
 </tr>
 <tr>
     <td>CountryCode</td>
-    <td th:field="${{city.countryCode}}"></td>
+    <td th:text="${{cityInfo.countryCode}}"></td>
 </tr>
 <tr>
     <td>Country Name</td>
-    <td th:field="${{city.countryName}}"></td>
+    <td th:text="${{cityInfo.countryName}}"></td>
 </tr>
 <tr>
     <td>District</td>
-    <td th:field="${{city.district}}"></td>
+    <td th:text="${{cityInfo.district}}"></td>
 </tr>
 <tr>
     <td>Population</td>
-    <td th:field="${{city.population}}"></td>
+    <td th:text="${{cityInfo.population}}"></td>
 </tr>
 <tr>
     <td>Local weather</td>
-    <td th:field="${{city.timeAndTemp.temp}}"></td>
+    <td th:text="${{cityInfo.timeAndTemp.temp}}"></td>
 </tr>
 <tr>
     <td>Local Time</td>
-    <td th:field="${{city.timeAndTemp.time}}"></td>
+    <td th:text="${{cityInfo.timeAndTemp.time}}"></td>
 </tr>
 </table>
 
