--- a/src/main/resources/templates/show_city.html
+++ b/src/main/resources/templates/show_city.html
@@ -1,45 +1,59 @@
 <!DOCTYPE html>
 <html xmlns:th="www.thymeLeaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+	<meta charset="UTF-8">
+	<title>Title</title>
 </head>
 <body>
-<H1>City</H1> <br/>
-<table>
-<tr>
-    <td>ID</td>
-    <td th:text="${{cityInfo.id}}"></td>
-</tr>
-<tr>
-    <td>Name</td>
-    <td th:text="${{cityInfo.cityName}}"></td>
-</tr>
-<tr>
-    <td>CountryCode</td>
-    <td th:text="${{cityInfo.countryCode}}"></td>
-</tr>
-<tr>
-    <td>Country Name</td>
-    <td th:text="${{cityInfo.countryName}}"></td>
-</tr>
-<tr>
-    <td>District</td>
-    <td th:text="${{cityInfo.district}}"></td>
-</tr>
-<tr>
-    <td>Population</td>
-    <td th:text="${{cityInfo.population}}"></td>
-</tr>
-<tr>
-    <td>Local weather</td>
-    <td th:text="${{cityInfo.timeAndTemp.temp}}"></td>
-</tr>
-<tr>
-    <td>Local Time</td>
-    <td th:text="${{cityInfo.timeAndTemp.time}}"></td>
-</tr>
-</table>
-
+	<H1>City</H1>
+	<br />
+	<table>
+		<tr>
+			<td>ID</td>
+			<td th:text="${{cityInfo.id}}"></td>
+		</tr>
+		<tr>
+			<td>Name</td>
+			<td th:text="${{cityInfo.cityName}}"></td>
+		</tr>
+		<tr>
+			<td>CountryCode</td>
+			<td th:text="${{cityInfo.countryCode}}"></td>
+		</tr>
+		<tr>
+			<td>Country Name</td>
+			<td th:text="${{cityInfo.countryName}}"></td>
+		</tr>
+		<tr>
+			<td>District</td>
+			<td th:text="${{cityInfo.district}}"></td>
+		</tr>
+		<tr>
+			<td>Population</td>
+			<td th:text="${{cityInfo.population}}"></td>
+		</tr>
+		<tr>
+			<td>Local weather</td>
+			<td th:text="${{cityInfo.timeAndTemp.temp}}"></td>
+		</tr>
+		<tr>
+			<td>Local Time</td>
+			<td th:text="${{cityInfo.timeAndTemp.time}}"></td>
+		</tr>
+	</table>
+	<br />
+	<br />
+	<p>For a fabulous weekend get away for 2 to <span  th:text="${{cityInfo.cityName}}"></span> sign up here.</p>
+	<br />
+	<form action="#">
+		Email <input type="text"/><br /><br />
+		<input type="radio" id="luxury" name="getaway" value="luxury">
+			<label for="luxury">Luxury $1000</label><br /><br />
+		<input type="radio" id="verygood" name="getaway" value="verygood">
+			<label for="verygood">Very Good $500</label><br /><br />
+		<input type="radio" id="good" name="getaway" value="good">
+			<label for="good">Good $350</label><br /><br />
+		<input type="submit" value="Submit"/>
+	</form>
 </body>
 </html>
