--- a/src/main/resources/templates/request_reservation.html
+++ b/src/main/resources/templates/request_reservation.html
@@ -5,6 +5,8 @@
 	<title>Title</title>
 </head>
 <body>
-	<p>The details of your weekend get away at the <span ></span> level to <span></span> are being emailed to <span></span></p>
+	<p>The details of your weekend get away at the <span th:text="${{level}}"></span> 
+		level to <span th:text="${{city}}"></span> are being emailed to 
+		<span th:text="${{email}}"></span></p>
 </body>
 </html>
