--- a/src/main/resources/templates/show_city.html
+++ b/src/main/resources/templates/show_city.html
@@ -43,16 +43,18 @@
 	</table>
 	<br />
 	<br />
-	<p>For a fabulous weekend get away for 2 to <span  th:text="${{cityInfo.cityName}}"></span> sign up here.</p>
+	<p>For a fabulous weekend get away for 2 to <span th:text="${{cityInfo.cityName}}"></span> sign up here.</p>
 	<br />
-	<form action="#">
-		Email <input type="text"/><br /><br />
-		<input type="radio" id="luxury" name="getaway" value="luxury">
+	<form action="#" th:action="@{/cities/reservation}" method="post">
+		<label for="email">Email</label>
+			<input type="text" id="email" th:name="email"/><br /><br />
+		<input type="radio" id="luxury" th:name="level" value="luxury">
 			<label for="luxury">Luxury $1000</label><br /><br />
-		<input type="radio" id="verygood" name="getaway" value="verygood">
+		<input type="radio" id="verygood" th:name="level" value="verygood">
 			<label for="verygood">Very Good $500</label><br /><br />
-		<input type="radio" id="good" name="getaway" value="good">
+		<input type="radio" id="good" th:name="level" value="good">
 			<label for="good">Good $350</label><br /><br />
+		<input type="hidden" th:name="city" th:value="${{cityInfo.cityName}}">
 		<input type="submit" value="Submit"/>
 	</form>
 </body>
